# Rock-Paper-Scissors

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  connection.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  install-dev-tools.sh  post_create.sh
C:\Users\Simon\AppData\Roaming\SPB_Data/.docker/: .buildNodeID  .token_seed
docs/source/: conf.py  index.rst
docs/source/_static/: .filler.txt
src/: ai_rest.py  app.py  camera.py  connection.py  controller.py  dynamicRNG.py  game.py  memoize.py  memoize_test.py  memoized.py  rps_server_rest.py  serialize_image.py  server_connection.py  setup.py
src/PRPS/: connection.py
src/PRPS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/PRPS/ai/: capture_image.py
src/ai/: capture_image.py
src/tests/: connection_test.py  memoize_test.py  test_connection.py  test_controller.py  test_dynamicRNG.py  test_game.py  test_memoize.py
tools/: PepperSDK.md  README.md
www/rps/: game_score.html  image_feed.html
